--- a/src/app/navbar/navbar-component.html
+++ b/src/app/navbar/navbar-component.html
@@ -15,6 +15,7 @@
 <body>
 <nav class="navbar navbar-default" role="navigation">
   <div class="container-fluid">
+
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
       <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1"
@@ -27,12 +28,8 @@
       <a class="navbar-brand" routerLink="/">FanZone</a>
     </div>
     <!-- Collect the nav links, forms, and other content for toggling -->
-    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-      <form class="navbar-form navbar-left" role="search">
-        <div class="form-group">
-          <input type="text" class="form-control" placeholder="Search" name="q" id="search-box"></div>
-        <button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>
-      </form>
+  <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+        <search></search>
       <div class="nav navbar-nav navbar-right">
         <div [hidden]="!authService.registered">
           <div class="dropdown">
