--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -54,17 +54,19 @@
               <div class="col-md-6 ">
                 <div class="list-group" *ngIf="followingTeams">
                   <a class="list-group-item active lead text-center"> Teams </a>
-                  <a (click)="sendToPlayer(team.id)" class="list-group-item list-group-item-action" *ngFor="let team of followingTeams | async">
-                    {{team.name}}
-                  </a>
+                  <div *ngFor="let team of followingTeams | async" class="list-group-item list-group-item-action">
+                    <a (click)="sendToTeam(team.id)"> {{team.name}} </a>
+                    <button *ngIf="currentUser === userId" type="button" class="btn btn-primary btn-xs btn-danger" (click)="unfollowTeam(team.id)">Unfollow</button>
+                  </div>
                 </div>
               </div>
               <div class="col-md-6 ">
                 <div class="list-group" *ngIf="followingPlayers">
                   <a class="list-group-item active lead text-center"> Players </a>
-                  <a (click)="sendToPlayer(player.id)" class="list-group-item list-group-item-action" *ngFor="let player of followingPlayers | async">
-                    {{player.first_name + " " + player.last_name}}
-                  </a>
+                  <div *ngFor="let player of followingPlayers | async" class="list-group-item list-group-item-action">
+                    <a (click)="sendToPlayer(player.id)"> {{player.first_name + " " + player.last_name}} </a>
+                    <button *ngIf="currentUser === userId" type="button" class="btn btn-primary btn-xs btn-danger" (click)="unfollowPlayer(player.id)">Unfollow</button>
+                  </div>
                 </div>
               </div>
             </div>
