--- a/src/app/list/list.component.html
+++ b/src/app/list/list.component.html
@@ -13,41 +13,33 @@
 </head>
     <body>
         <br>
-        <div style="text-align:center">
-            <h1>Clubs</h1></div>
-        <hr><br>
-		<div class="container" *ngFor="let club of clubs | async">
+		<div class="container-fluid">
 			<div class="row">
-				<div class="col-sm-6 text-left">
-					<div class="card">
-						<div class="card-header">{{club.name}}</div>
-					</div>
+			<div class="col-md-4">
+				<div class="list-group">
+				<a class="list-group-item active lead text-center">Clubs</a>
+				<a (click)="sendToPlayer(club.id)" class="list-group-item list-group-item-action" *ngFor="let club of clubs | async">
+					{{club.name}}
+				</a>
 				</div>
-			</div><hr>
-		</div>
-        <div style="text-align:center">
-            <h1>Teams</h1></div>
-        <hr><br>
-		<div class="container" *ngFor="let team of teams | async">
-			<div class="row">
-				<div class="col-sm-6 text-left">
-					<div class="card">
-						<div class="card-header">{{team.name}}</div>
-					</div>
+			</div>
+			<div class="col-md-4">
+				<div class="list-group">
+				<a class="list-group-item active lead text-center">Teams</a>
+				<a (click)="sendToPlayer(team.id)" class="list-group-item list-group-item-action" *ngFor="let team of teams | async">
+					{{team.name}}
+				</a>
 				</div>
-			</div><hr>
-		</div>
-        <div style="text-align:center">
-            <h1>Players</h1></div>
-        <hr><br>
-		<div class="container" *ngFor="let player of players | async">
-			<div class="row">
-				<div class="col-sm-6 text-left">
-					<div class="card">
-						<div class="card-header">{{player.first_name}} {{player.last_name}}</div>
-					</div>
+			</div>
+			<div class="col-md-4">
+				<div class="list-group">
+				<a class="list-group-item active lead text-center">Players</a>
+				<a (click)="sendToPlayer(player.id)" class="list-group-item list-group-item-action" *ngFor="let player of players | async">
+					{{player.first_name + " " + player.last_name}}
+				</a>
 				</div>
-			</div><hr>
+			</div>
+			</div>
 		</div>
     </body>
 </html>
