--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -36,12 +36,14 @@
               <div class="col-md-8">
                 <div class="row">
                   <div class="col-md-12">
-                    <h1 class="only-bottom-margin"> {{(profileData | async)?.name}} </h1>
+                    <h2 class="only-bottom-margin"> {{(profileData | async)?.name}}
+                      <span class="badge badge-success" *ngIf="currentUser === userId">Me</span>
+                    </h2>
                   </div>
                 </div>
                 <div class="row">
                   <div class="col-md-6">
-                    <span *ngIf="(profileData | async)?.email" class="text-muted">Email:</span> {{(profileData | async)?.email}} <br>
+                    <span *ngIf="currentUser === userId" class="text-muted">Email:</span> {{(profileData | async)?.email}} <br>
                   </div>
                 </div>
               </div>
@@ -56,7 +58,7 @@
                   <a class="list-group-item active lead text-center"> Teams </a>
                   <div *ngFor="let team of followingTeams | async" class="list-group-item list-group-item-action">
                     <a (click)="sendToTeam(team.id)"> {{team.name}} </a>
-                    <button *ngIf="currentUser === userId" type="button" class="btn btn-primary btn-xs btn-danger" (click)="unfollowTeam(team.id)">Unfollow</button>
+                    <button *ngIf="currentUser === userId" type="button" class="btn btn-primary btn-xs btn-danger pull-right" (click)="unfollowTeam(team.id)">Unfollow</button>
                   </div>
                 </div>
               </div>
@@ -65,16 +67,16 @@
                   <a class="list-group-item active lead text-center"> Players </a>
                   <div *ngFor="let player of followingPlayers | async" class="list-group-item list-group-item-action">
                     <a (click)="sendToPlayer(player.id)"> {{player.first_name + " " + player.last_name}} </a>
-                    <button *ngIf="currentUser === userId" type="button" class="btn btn-primary btn-xs btn-danger" (click)="unfollowPlayer(player.id)">Unfollow</button>
+                    <button *ngIf="currentUser === userId" type="button" class="btn btn-primary btn-xs btn-danger pull-right" (click)="unfollowPlayer(player.id)">Unfollow</button>
                   </div>
                 </div>
               </div>
             </div>
             <div class="row">
-              <div class="col-md-6 text-center" *ngIf="profileData.followed_teams">
+              <div class="col-md-6 text-center" *ngIf="(followingTeams | async)?.length > 0">
                 <a routerLink="/teamsFollowed">See all</a>
               </div>
-              <div class="col-md-6 text-center" *ngIf="profileData.followed_players">
+              <div class="col-md-6 text-center" *ngIf="(followingPlayers | async)?.length > 0">
                 <a routerLink="/playersFollowed">See all</a>
               </div>
             </div>
