--- a/src/app/dashboard/dashboard-component.html
+++ b/src/app/dashboard/dashboard-component.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
-<!-- Latest compiled and minified CSS -->
-<html lang="en" ng-app="skeleton_app">
+<html lang="en">
   <head>
     <title>Dashboard</title>
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.4/css/bootstrap.min.css" rel="stylesheet"/>
@@ -13,42 +12,11 @@
     <body>
         <br>
         <div style="text-align:center">
-            <h1>Dashboard</h1></div>
+            <h1>Dashboard</h1>
+        </div>
         <hr><br>
-		<div class="container" *ngFor="let post of posts | async">
-			<div class = "row">
-				<div class="col-sm-6 text-left">
-					<div class="card">
-						<div class="card-header">{{post.name}}</div>
-						<div class="card-block">{{post.text}}</div>
-					</div>
-					<div class="row">
-						<div class="col-sm-12">
-							<button type="button" class = "btn btn-default pull-right" style="text-align:center"><i class="glyphicon glyphicon-thumbs-up"></i></button>
-							<button type="button" class = "btn btn-default pull-right" style="text-align:center"><i class="glyphicon glyphicon-share-alt"></i></button>
-						</div>
-					</div>
-				</div>
-				<div class="col-sm-6 text-left">
-					<div class="card">
-						<div class="card-header">Comments</div>
-							<div class="card-block" *ngFor="let comment of post.comments | keys">
-                <div *ngFor="let t of comment.value | keys">
-              <li>{{t.value}}
-              <input type="text" #updatetext [value]="" />
-              <button (click)="updateComment(comment.key, updatetext.value, post.id)">Update</button>
-              <button (click)="deleteComment(comment.key, post.id)">Delete</button>
-              </li>
-            </div>
-							</div>
-              </div>
-					<div class="form-group">
-						<label for="comment">Comment:</label>
-            <input type="text" #newComment/>
-            <button (click)="addComment(newComment.value, post.id)">Add</button>
-					</div>
-				</div>
-			</div><hr>
-		</div>
+
+        IT WORKS!
+
     </body>
 </html>
