--- a/src/app/dashboard/dashboard-component.html
+++ b/src/app/dashboard/dashboard-component.html
@@ -18,5 +18,13 @@
 
         {{posts.length}}
 
+        <div *ngFor="let post of posts">
+          <h3>{{post.title}}</h3>
+          <b>{{post.name}}</b>
+          <br>
+          {{post.text}}
+          <hr>
+        </div>
+
     </body>
 </html>
