--- a/src/app/dashboard/dashboard-component.html
+++ b/src/app/dashboard/dashboard-component.html
@@ -16,15 +16,8 @@
         </div>
         <hr><br>
 
-        {{posts.length}}
+        <app-post *ngFor="let post of posts" [post]="post"></app-post>
 
-        <div *ngFor="let post of posts">
-          <h3>{{post.title}}</h3>
-          <b>{{post.name}}</b>
-          <br>
-          {{post.text}}
-          <hr>
-        </div>
 
     </body>
 </html>
