--- a/src/app/post/post.component.html
+++ b/src/app/post/post.component.html
@@ -1,17 +1,20 @@
+<div *ngIf="post">
 
-<div class="row">
-  <div class="col-md-8 col-md-offset-2">
-    <div class="panel panel-default">
-      <div class="panel-heading">
-        <h2 class="panel-title">
-          <a>{{post.name}}</a>
-        </h2>
+  <div class="row">
+    <div class="col-xs-12 col-xs-offset-0 col-sm-8 col-sm-offset-2 col-md-8 col-md-offset-2 col-lg-8 col-lg-offset-2">
+      <div class="panel panel-default">
+        <div class="panel-heading">
+          <h2 class="panel-title">
+            <a>{{post.name}}</a>
+          </h2>
+        </div>
+        <div class="panel-body">
+          <b>{{post.title}} </b> - {{(post.created_at | date)}} <br>
+          {{post.text}}
+        </div>
+        <div class="panel-footer">LIKE/SHARE</div>
       </div>
-      <div class="panel-body">
-        <b>{{post.title}} </b> - {{(post.created_at | date)}} <br>
-        {{post.text}}
-      </div>
-      <div class="panel-footer">LIKE/SHARE</div>
     </div>
   </div>
+
 </div>
