--- a/src/app/navbar/navbar-component.css
+++ b/src/app/navbar/navbar-component.css
@@ -1,65 +1,7 @@
-.search-box {
-  float:right;
-}
-.form{
-    height: 50px;
-    overflow: auto;
-    padding:5px 5px 0;
-}
 .user {
-  background: no-repeat center center;
-  background-size: cover;
   border-radius: 50%;
   display: inline-block;
-  height: 50px;
-  width: 50px;
-}
-.two {
-  background-image: url('http://placehold.it/50x50');
-}
-.dropdown {
-  display: inline-block;
-    position: relative;
-}
-.dropdown-content {
-    background-color: #f9f9f9;
-    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
-    display: none;
-    min-width: 160px;
-    padding: 12px 16px;
-    position: absolute;
-    z-index: 1;
-}
-.dropdown-content a {
-    color: black;
-    display: block;
-    padding: 12px 16px;
-    text-decoration: none;
-}
-.dropdown-content a:hover {background-color: #f1f1f1}
-.dropdown:hover .dropdown-content {
-    display: block;
-}
-.sign-in {
-  display: block;
-  margin: 0 auto;
-  max-width: 300px;
-}
-.sign-in__heading {
-  font-size: 30px;
-  font-weight: 300;
-  margin-bottom: 36px;
-  text-align: center;
-}
-.sign-in__button {
-  background: transparent;
-  border: 1px solid #555;
-  color: #999;
-  font-family: inherit;
-  font-size: 18px;
-  height: 48px;
-  line-height: 48px;
-  margin-bottom: 10px;
-  padding: 0;
-  width: 100%;
+  height: 20px;
+  width: 20px;
+  margin-right: 5px;
 }
