--- a/src/app/results/results.component.html
+++ b/src/app/results/results.component.html
@@ -1,6 +1,6 @@
 
 <div>
-  <div *ngFor="let player of players" class="panel panel-default">
+  <div *ngFor="let player of players" class="panel panel-default col-md-6">
       <div class="panel-heading">
         <h3 class="panel-title">{{player.first_name}} {{player.last_name}}</h3>
       </div>
@@ -13,6 +13,23 @@
         <ul class="list-unstyled">
           <li class="list-goup-item">Location: {{player?.location.city}}</li>
           <li class="list-goup-item">Age: {{player?.age}}</li>
+        </ul>
+      </div>
+    </div>
+  </div>
+
+  <div *ngFor="let user of users" class="panel panel-default col-md-6 clearfix">
+      <div class="panel-heading">
+        <h3 class="panel-title">{{user.name}}</h3>
+      </div>
+    
+    <div class="panel-body">
+      <div class="col-md-4">
+        <img src="{{user.avatar}}" class="as-banner" />
+      </div>
+      <div class="col-md-8">
+        <ul class="list-unstyled">
+          <li class="list-goup-item">Email: {{user?.email}}</li>
         </ul>
       </div>
     </div>
