--- a/src/app/player-profile/player.component.html
+++ b/src/app/player-profile/player.component.html
@@ -33,7 +33,6 @@
               <em> Weight:</em> {{(playerData | async)?.weight}}kg <br>
               <em> Gender:</em> {{(playerData | async)?.gender}} <br>
               <em> Teams:</em> <br>
-              <div class="col-sm-5">
           <div *ngFor="let team of playerTeams">
             <div class="list-group-item list-group-item-action media">
               <div class="media-left">
@@ -42,11 +41,23 @@
                 </a>
               </div>
               <div class="media-body">
-                <a (click)="sendToTeam(team.$key)">{{(getTeam(team.$key))?.name}}, {{getClub(team.$key)?.name}}</a>
+                <a (click)="sendToTeam(team.$key)">{{(getTeam(team.$key))?.name}}</a>
               </div>
             </div>
           </div>
-        </div>
+          <em> Clubs:</em>
+          <div *ngFor="let team of playerTeams">
+            <div class="list-group-item list-group-item-action media">
+              <div class="media-left">
+                <a href="#">
+                  <img class="team-image" src="{{(getClub(team.$key))?.avatar}}" alt="{{(getClub(team.$key))?.name}}">
+                </a>
+              </div>
+              <div class="media-body">
+                <a (click)="sendToClub(getClub(team.$key)?.id)">{{(getClub(team.$key))?.name}}</a>
+              </div>
+            </div>
+          </div>
       </div>
       </div>
 
