--- a/src/app/player-profile/player.component.html
+++ b/src/app/player-profile/player.component.html
@@ -33,6 +33,7 @@
               <em> Weight:</em> {{(playerData | async)?.weight}}kg <br>
               <em> Gender:</em> {{(playerData | async)?.gender}} <br>
               <em> Teams:</em> <br>
+              <br>
           <div *ngFor="let team of playerTeams">
             <div class="list-group-item list-group-item-action media">
               <div class="media-left">
@@ -42,11 +43,16 @@
               </div>
               <div class="media-body">
                 <a (click)="sendToTeam(team.$key)">{{(getTeam(team.$key))?.name}}</a>
+                <button *ngIf="followTeams.indexOf((getTeam(team.$key))?.id) === -1" (click)="followTeam((getTeam(team.$key))?.id)" type="button" class="btn btn-sm btn-primary pull-right">Follow</button>
+                <button *ngIf="followTeams.indexOf((getTeam(team.$key))?.id) !== -1" (click)="unfollowTeam((getTeam(team.$key))?.id)" type="button" class="btn btn-sm btn-danger pull-right">Unfollow</button>
               </div>
             </div>
           </div>
-          <em> Clubs:</em>
+          <br>
+          <em> Clubs:</em> <br>
+          <br>
           <div *ngFor="let team of playerTeams">
+            <div *ngIf="(getClub(team.$key))?.name != null"> <!--- only display if the team belongs to a club --->
             <div class="list-group-item list-group-item-action media">
               <div class="media-left">
                 <a href="#">
@@ -55,7 +61,10 @@
               </div>
               <div class="media-body">
                 <a (click)="sendToClub(getClub(team.$key)?.id)">{{(getClub(team.$key))?.name}}</a>
+                <button *ngIf="followClubs.indexOf((getClub(team.$key))?.id) === -1" (click)="followClub((getClub(team.$key))?.id)" type="button" class="btn btn-sm btn-primary pull-right">Follow</button>
+                <button *ngIf="followClubs.indexOf((getClub(team.$key))?.id) !== -1" (click)="unfollowClub((getClub(team.$key))?.id)" type="button" class="btn btn-sm btn-danger pull-right">Unfollow</button>
               </div>
+            </div>
             </div>
           </div>
       </div>
