--- a/src/app/results/results.component.html
+++ b/src/app/results/results.component.html
@@ -1,43 +1,67 @@
-
 <div>
-  <div *ngFor="let player of players" class="panel panel-default col-md-6">
+  <div *ngFor="let player of players" class="col-sm-3 col-md-offset-1 col-md-5 col-md-offset-1 col-lg-5 col-lg-offset-1">
+    <div class="panel panel-default">
       <div class="panel-heading">
         <h3 class="panel-title">{{player.first_name}} {{player.last_name}}</h3>
       </div>
-    
-    <div class="panel-body">
-      <div class="col-md-4">
-        <img src="{{player.avatar}}" class="as-banner" />
-      </div>
-      <div class="col-md-8">
-        <ul class="list-unstyled">
-          <li class="list-goup-item">Location: {{player?.location.city}}</li>
-          <li class="list-goup-item">Age: {{player?.age}}</li>
-        </ul>
+      <div class="panel-body">
+        <div class="col-md-4">
+          <img src="{{player.avatar}}" class="as-banner"/>
+        </div>
+        <div class="col-md-8">
+          <ul class="list-unstyled">
+            <li class="list-goup-item">Location: {{player?.location.city}}</li>
+            <li class="list-goup-item">Age: {{player?.age}}</li>
+          </ul>
+        </div>
       </div>
     </div>
   </div>
-
-  <div *ngFor="let user of users" class="panel panel-default col-md-6 clearfix">
+  <div *ngFor="let team of teams" class="col-md-5 col-md-offset-1">
+    <div class="panel panel-default">
+      <div class="panel-heading">
+        <h3 class="panel-title">{{team.name}}</h3>
+      </div>
+      <div class="panel-body">
+        <div class="col-md-4">
+          <img src="{{team.avatar}}" class="as-banner"/>
+        </div>
+        <div class="col-md-8">
+          <ul class="list-unstyled">
+            <li class="list-goup-item">Location: {{team?.location.city}}</li>
+            <li class="list-goup-item">Age Group: {{team?.age_group}}</li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div *ngFor="let user of users" class="col-md-5 col-md-offset-1">
+    <div class="panel panel-default">
       <div class="panel-heading">
         <h3 class="panel-title">{{user.name}}</h3>
       </div>
-    
-    <div class="panel-body">
-      <div class="col-md-4">
-        <img src="{{user.avatar}}" class="as-banner" />
+      <div class="panel-body">
+        <div class="col-md-4">
+          <img src="{{user.avatar}}" class="as-banner"/>
+        </div>
       </div>
-      <div class="col-md-8">
-        <ul class="list-unstyled">
-          <li class="list-goup-item">Email: {{user?.email}}</li>
-        </ul>
+    </div>
+  </div>
+  <div *ngFor="let club of clubs" class="col-md-5 col-md-offset-1">
+    <div class="panel panel-default">
+      <div class="panel-heading">
+        <h3 class="panel-title">{{club.name}}</h3>
+      </div>
+      <div class="panel-body">
+        <div class="col-md-4">
+          <img src="{{club.avatar}}" class="as-banner"/>
+        </div>
+        <div class="col-md-8">
+          <ul class="list-unstyled">
+            <li class="list-goup-item">Location: {{club?.location.city}}</li>
+          </ul>
+        </div>
       </div>
     </div>
   </div>
 </div>
-
-
-
-
-
-
