--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -6,5 +6,11 @@
 <hr>
 <br>
 
-<app-post *ngFor="let post of posts " [post]="post"></app-post>
-
+<app-post *ngFor="let post of shownPosts " [post]="post"></app-post>
+<div class="row">
+    <div class="col-md-12 text-center">
+		<button *ngIf="(this.shownPostAmount != this.posts.length)" type="button"
+            class="btn btn-info btn-sm" (click)="showMore()">Show more
+        </button>
+    </div>
+</div>
